chore(i18n): update translations

--- a/i18n/bn-IN.properties
+++ b/i18n/bn-IN.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = এই কার্য তৈরী করার স
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = ত্রুটি
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = এই কার্যটি মোছার সময় একটি ত্রুটি ঘটেছিল।
+be.taskDeleteErrorMessage = এই কার্য মোছার সময় একটি ত্রুটি ঘটেছে। অনুগ্রহ করে পৃষ্ঠাটি রিফ্রেশ করুন এবং আবার চেষ্টা করুন।
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = কার্য মুছুন
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = কার্য মুছবেন?
+be.taskDeletePrompt = আপনি এই কার্যটি স্থায়ীভাবে মুছতে নিশ্চিত?
 # Due date for a task
 be.taskDueDate = ডিউ
 # Error message when a task edit fails
 be.taskEditErrorMessage = এই কার্যটি আপডেট করার সময় একটি ত্রুটি ঘটেছিল।
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = কার্য সংশোধন করুন
 # Reject option for a task
 be.taskReject = অস্বীকার করুন
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = ডিউ তারিখ
 be.tasks.addTaskForm.messageLabel = বার্তা
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = স্বত্ত্বনিয়োগীদের নির্বাচন করুন
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = কাজ যোগ করুন
 # title for approval task popup
 be.tasks.createTask.approval.title = অনুমোদনের কার্য তৈরী করুন
 # title for general task popup
 be.tasks.createTask.general.title = সাধারণ কার্য তৈরি করুন
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = অনুমোদনের কার্য সম্পাদনা করুন
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = সাধারণ কার্য সম্পাদনা করুন
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = অনুমোদন করুন
 # Label for an approved task
