--- a/i18n/zh-TW.properties
+++ b/i18n/zh-TW.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = 建立此工作時發生錯誤，請再試一次。
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = 錯誤
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = 刪除此工作時發生錯誤。
+be.taskDeleteErrorMessage = 刪除此工作時發生錯誤。請重新整理頁面並再試一次。
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = 刪除工作
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = 刪除工作嗎？
+be.taskDeletePrompt = 確定要永久刪除此工作？
 # Due date for a task
 be.taskDueDate = 到期
 # Error message when a task edit fails
 be.taskEditErrorMessage = 更新此工作時發生錯誤。
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = 修改工作
 # Reject option for a task
 be.taskReject = 拒絕
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = 到期日期
 be.tasks.addTaskForm.messageLabel = 訊息
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = 選擇被指定者
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = 新增工作
 # title for approval task popup
 be.tasks.createTask.approval.title = 建立核准工作
 # title for general task popup
 be.tasks.createTask.general.title = 建立一般工作
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = 編輯核准工作
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = 編輯一般工作
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = 核准
 # Label for an approved task
