--- a/i18n/da-DK.properties
+++ b/i18n/da-DK.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Der opstod en fejl under oprettelse af denne opgave.
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Fejl
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Der opstod en fejl under sletning af denne opgave.
+be.taskDeleteErrorMessage = Der opstod en fejl under sletning af denne opgave. Opdater siden, og prøv igen.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Slet opgave
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Slet opgave?
+be.taskDeletePrompt = Er du sikker på, at du vil slette denne opgave permanent?
 # Due date for a task
 be.taskDueDate = Deadline
 # Error message when a task edit fails
 be.taskEditErrorMessage = Der opstod en fejl under opdatering af denne opgave.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Rediger opgave
 # Reject option for a task
 be.taskReject = Afvis
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Deadline
 be.tasks.addTaskForm.messageLabel = Meddelelse
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Vælg modtagere
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Tilføj opgave
 # title for approval task popup
 be.tasks.createTask.approval.title = Opret en godkendelsesopgave
 # title for general task popup
 be.tasks.createTask.general.title = Opret en generel opgave
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Rediger godkendelsesopgave
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Rediger generel opgave
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Godkend
 # Label for an approved task
