--- a/i18n/de-DE.properties
+++ b/i18n/de-DE.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Beim Erstellen dieser Aufgabe ist ein Fehler aufgetr
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Fehler
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Beim Löschen dieser Aufgabe ist ein Fehler aufgetreten.
+be.taskDeleteErrorMessage = Beim Löschen der Aufgabe ist ein Fehler aufgetreten. Aktualisieren Sie die Seite und versuchen Sie es erneut.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Aufgabe löschen
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Aufgabe löschen?
+be.taskDeletePrompt = Möchten Sie diese Aufgabe wirklich dauerhaft löschen?
 # Due date for a task
 be.taskDueDate = Fällig
 # Error message when a task edit fails
 be.taskEditErrorMessage = Beim Aktualisieren dieser Aufgabe ist ein Fehler aufgetreten.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Aufgabe ändern
 # Reject option for a task
 be.taskReject = Ablehnen
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Fälligkeitsdatum
 be.tasks.addTaskForm.messageLabel = Nachricht
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Beauftragte auswählen
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Aufgabe hinzufügen
 # title for approval task popup
 be.tasks.createTask.approval.title = Genehmigungsaufgabe erstellen
 # title for general task popup
 be.tasks.createTask.general.title = Allgemeine Aufgabe erstellen
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Genehmigungsaufgabe bearbeiten
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Allgemeine Aufgabe bearbeiten
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Genehmigen
 # Label for an approved task
