--- a/i18n/en-AU.properties
+++ b/i18n/en-AU.properties
@@ -373,11 +373,11 @@ be.taskCreateErrorMessage = An error occurred while creating this task. Please t
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Error
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = There was an error deleting this task.
+be.taskDeleteErrorMessage = There was an error while deleting this task. Please refresh the page and try again.
 # Text to show on menu item to delete task
 be.taskDeleteMenuItem = Delete task
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Delete task?
+be.taskDeletePrompt = Are you sure you want to permanently delete this task?
 # Due date for a task
 be.taskDueDate = Due
 # Error message when a task edit fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Due date
 be.tasks.addTaskForm.messageLabel = Message
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Select assignees
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Add task
 # title for approval task popup
 be.tasks.createTask.approval.title = Create approval task
 # title for general task popup
 be.tasks.createTask.general.title = Create general task
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Edit approval task
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Edit general task
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Approve
 # Label for an approved task
