--- a/i18n/en-CA.properties
+++ b/i18n/en-CA.properties
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Due Date
 be.tasks.addTaskForm.messageLabel = Message
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Select Assignees
-# label for create button in create task popup
-be.tasks.addTaskForm.submit = Add Task
+# label for create button in create task modal in create mode
+be.tasks.addTaskForm.submit = Create
 # title for approval task popup
 be.tasks.createTask.approval.title = Create Approval Task
 # title for general task popup
 be.tasks.createTask.general.title = Create General Task
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Modify Approval Task
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Modify General Task
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Approve
 # Label for an approved task
