--- a/i18n/es-419.properties
+++ b/i18n/es-419.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Se ha producido un error al crear esta tarea. Intén
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Error
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Se ha producido un error al eliminar esta tarea.
+be.taskDeleteErrorMessage = Se ha producido un error al eliminar esta tarea. Actualice la página e inténtelo de nuevo.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Eliminar tarea
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = ¿Eliminar tarea?
+be.taskDeletePrompt = ¿Seguro que desea eliminar esta tarea de forma permanente?
 # Due date for a task
 be.taskDueDate = Fecha de vencimiento
 # Error message when a task edit fails
 be.taskEditErrorMessage = Se ha producido un error al actualizar esta tarea.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Modificar tarea
 # Reject option for a task
 be.taskReject = Rechazar
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Fecha de vencimiento
 be.tasks.addTaskForm.messageLabel = Mensaje
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Seleccionar personas asignadas
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Agregar tarea
 # title for approval task popup
 be.tasks.createTask.approval.title = Crear una tarea de aprobación
 # title for general task popup
 be.tasks.createTask.general.title = Crear una tarea general
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Editar tarea de aprobación
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Editar tarea general
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Aprobar
 # Label for an approved task
