--- a/i18n/fi-FI.properties
+++ b/i18n/fi-FI.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Tehtävää luotaessa tapahtui virhe. Yritä uudelle
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Virhe
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Virhe poistettaessa tehtävää.
+be.taskDeleteErrorMessage = Tehtävän poistamisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Poista tehtävä
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Poistetaanko tehtävä?
+be.taskDeletePrompt = Haluatko varmasti poistaa tämän tehtävän pysyvästi?
 # Due date for a task
 be.taskDueDate = Määräaika
 # Error message when a task edit fails
 be.taskEditErrorMessage = Virhe päivitettäessä tehtävää.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Muokkaa tehtävää
 # Reject option for a task
 be.taskReject = Hylkää
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Määräpäivä
 be.tasks.addTaskForm.messageLabel = Viesti
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Valitse vastuuhenkilöt
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Lisää tehtävä
 # title for approval task popup
 be.tasks.createTask.approval.title = Luo hyväksyntätehtävä
 # title for general task popup
 be.tasks.createTask.general.title = Luo yleinen tehtävä
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Muokkaa hyväksyntätehtävää
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Muokkaa yleistä tehtävää
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Hyväksy
 # Label for an approved task
