--- a/i18n/fr-CA.properties
+++ b/i18n/fr-CA.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Une erreur s'est produite lors de la création de ce
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Erreur
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Une erreur s'est produite lors de la suppression de cette tâche.
+be.taskDeleteErrorMessage = Une erreur s'est produite lors de la suppression de cette tâche. Veuillez actualiser la page et réessayer.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Supprimer la tâche
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Supprimer la tâche ?
+be.taskDeletePrompt = Voulez-vous vraiment supprimer définitivement cette tâche ?
 # Due date for a task
 be.taskDueDate = Échéance
 # Error message when a task edit fails
 be.taskEditErrorMessage = Une erreur s'est produite lors de la mise à jour de cette tâche.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Modifier la tâche
 # Reject option for a task
 be.taskReject = Refuser
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Échéance
 be.tasks.addTaskForm.messageLabel = Message
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Sélectionner les cessionnaires
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Ajouter une tâche
 # title for approval task popup
 be.tasks.createTask.approval.title = Créer une tâche d'approbation
 # title for general task popup
 be.tasks.createTask.general.title = Créer une tâche générale
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Modifier une tâche d'approbation
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Modifier une tâche générale
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Approuver
 # Label for an approved task
