--- a/i18n/hi-IN.properties
+++ b/i18n/hi-IN.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = यह कार्य बनाते समय ए
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = त्रुटि
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = यह कार्य हटाने में एक त्रुटि हुई.
+be.taskDeleteErrorMessage = इस कार्य को हटाने के दौरान एक त्रुटि हुई थी. कृपया पेज रीफ़्रेश करें और फिर से कोशिश करें.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = कार्य हटाएँ
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = कार्य हटाएँ?
+be.taskDeletePrompt = क्या आप वाकई इस कार्य को स्थायी रूप से हटाना चाहते हैं?
 # Due date for a task
 be.taskDueDate = नियत
 # Error message when a task edit fails
 be.taskEditErrorMessage = यह कार्य अपडेट करने में एक त्रुटि हुई.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = कार्य संशोधित करें
 # Reject option for a task
 be.taskReject = अस्वीकृत करें
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = नियत तारीख़
 be.tasks.addTaskForm.messageLabel = संदेश
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = असाइनी चुनें
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = कार्य जोड़ें
 # title for approval task popup
 be.tasks.createTask.approval.title = अनुमोदन कार्य बनाएँ
 # title for general task popup
 be.tasks.createTask.general.title = सामान्य कार्य बनाएँ
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = अनुमोदन कार्य संपादित करें
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = सामान्य कार्य संपादित करें
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = स्वीकार करें
 # Label for an approved task
