--- a/i18n/it-IT.properties
+++ b/i18n/it-IT.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Si è verificato un errore durante la creazione di q
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Errore
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Errore durante l'eliminazione di questa attività.
+be.taskDeleteErrorMessage = Si è verificato un errore durante l'eliminazione dell'attività. Aggiorna la pagina e riprova.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Elimina attività
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Eliminare l'attività?
+be.taskDeletePrompt = Eliminare definitivamente questa attività?
 # Due date for a task
 be.taskDueDate = Scadenza
 # Error message when a task edit fails
 be.taskEditErrorMessage = Errore durante l'aggiornamento di questa attività.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Modifica attività
 # Reject option for a task
 be.taskReject = Rifiuta
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Data di scadenza
 be.tasks.addTaskForm.messageLabel = Messaggio
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Seleziona assegnatari
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Aggiungi attività
 # title for approval task popup
 be.tasks.createTask.approval.title = Crea attività di approvazione
 # title for general task popup
 be.tasks.createTask.general.title = Crea attività generale
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Modifica attività di approvazione
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Modifica attività generale
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Approva
 # Label for an approved task
