--- a/i18n/nb-NO.properties
+++ b/i18n/nb-NO.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Det oppsto en feil da du opprettet denne oppgaven. P
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Feil
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Det oppstod en feil med å slette denne oppgaven.
+be.taskDeleteErrorMessage = Kan ikke slette denne oppgaven. Last inn siden på nytt, og prøv igjen.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Slett oppgave
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Vil du slette oppgaven?
+be.taskDeletePrompt = Er du sikker på at du vil slette denne oppgaven for godt?
 # Due date for a task
 be.taskDueDate = Forfaller
 # Error message when a task edit fails
 be.taskEditErrorMessage = Det oppstod en feil med å oppdatere denne oppgaven.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Endre oppgave
 # Reject option for a task
 be.taskReject = Avslå
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Forfallsdato
 be.tasks.addTaskForm.messageLabel = Melding
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Velg ansvarlige
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Legg til oppgave
 # title for approval task popup
 be.tasks.createTask.approval.title = Opprett en godkjenningsoppgave
 # title for general task popup
 be.tasks.createTask.general.title = Opprett en generell oppgave
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Rediger godkjenningsoppgave
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Rediger generell oppgave
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Godkjenn
 # Label for an approved task
