--- a/i18n/nl-NL.properties
+++ b/i18n/nl-NL.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Er is een fout opgetreden tijdens het maken van deze
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Fout
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Er is een fout opgetreden bij het verwijderen van deze taak.
+be.taskDeleteErrorMessage = Er is een fout opgetreden tijdens het verwijderen van deze taak. Vernieuw de pagina en probeer het opnieuw.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Taak verwijderen
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Taak verwijderen?
+be.taskDeletePrompt = Weet u zeker dat u deze taak permanent wilt verwijderen?
 # Due date for a task
 be.taskDueDate = Deadline
 # Error message when a task edit fails
 be.taskEditErrorMessage = Er is een fout opgetreden bij het bijwerken van deze taak.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Taak wijzigen
 # Reject option for a task
 be.taskReject = Weigeren
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Vervaldatum
 be.tasks.addTaskForm.messageLabel = Bericht
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Selecteer toegewezen gebruikers
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Taak toevoegen
 # title for approval task popup
 be.tasks.createTask.approval.title = Goedkeuringstaak maken
 # title for general task popup
 be.tasks.createTask.general.title = Algemene taak maken
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Goedkeuringstaak bewerken
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Algemene taak bewerken
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Goedkeuren
 # Label for an approved task
