--- a/i18n/pl-PL.properties
+++ b/i18n/pl-PL.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Podczas tworzenia tego zadania wystąpił błąd. Sp
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Błąd
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Podczas usuwania zadania wystąpił błąd.
+be.taskDeleteErrorMessage = Podczas usuwania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Usuń zadanie
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Usunąć zadanie?
+be.taskDeletePrompt = Czy na pewno chcesz trwale usunąć to zadanie?
 # Due date for a task
 be.taskDueDate = Termin
 # Error message when a task edit fails
 be.taskEditErrorMessage = Podczas aktualizowania zadania wystąpił błąd.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Modyfikuj zadanie
 # Reject option for a task
 be.taskReject = Odrzuć
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Termin
 be.tasks.addTaskForm.messageLabel = Wiadomość
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Wybierz osoby przypisane
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Dodaj zadanie
 # title for approval task popup
 be.tasks.createTask.approval.title = Utwórz zadanie zatwierdzenia
 # title for general task popup
 be.tasks.createTask.general.title = Utwórz zadanie ogólne
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Edytuj zadanie zatwierdzenia
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Edytuj zadanie ogólne
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Zatwierdź
 # Label for an approved task
