--- a/i18n/pt-BR.properties
+++ b/i18n/pt-BR.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Ocorreu um erro ao criar esta tarefa. Tente novament
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Erro
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Ocorreu um erro ao excluir essa tarefa.
+be.taskDeleteErrorMessage = Ocorreu um erro ao excluir esta tarefa. Atualize a página e tente novamente.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Excluir tarefa
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Excluir tarefa?
+be.taskDeletePrompt = Tem certeza de que deseja excluir permanentemente este tarefa?
 # Due date for a task
 be.taskDueDate = Prazo
 # Error message when a task edit fails
 be.taskEditErrorMessage = Ocorreu um erro ao atualizar essa tarefa.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Modificar tarefa
 # Reject option for a task
 be.taskReject = Recusar
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Data de vencimento
 be.tasks.addTaskForm.messageLabel = Mensagem
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Selecionar responsáveis
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Adicionar tarefa
 # title for approval task popup
 be.tasks.createTask.approval.title = Criar uma tarefa de aprovação
 # title for general task popup
 be.tasks.createTask.general.title = Criar uma tarefa geral
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Editar tarefa de aprovação
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Editar tarefa geral
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Aprovar
 # Label for an approved task
