--- a/i18n/ru-RU.properties
+++ b/i18n/ru-RU.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Ошибка при создании этой зад
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Ошибка
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Ошибка при удалении задачи.
+be.taskDeleteErrorMessage = Ошибка при удалении этой задачи. Обновите страницу и повторите попытку.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Удалить задачу
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Удалить задачу?
+be.taskDeletePrompt = Действительно удалить эту задачу без возможности восстановления?
 # Due date for a task
 be.taskDueDate = До
 # Error message when a task edit fails
 be.taskEditErrorMessage = Ошибка при обновлении задачи.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Изменить задачу
 # Reject option for a task
 be.taskReject = Отклонить
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Дата истечения срока
 be.tasks.addTaskForm.messageLabel = Сообщение
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Выберите исполнителей
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Добавить задачу
 # title for approval task popup
 be.tasks.createTask.approval.title = Создание задачи утверждения
 # title for general task popup
 be.tasks.createTask.general.title = Создание общей задачи
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Изменить задачу утверждения
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Изменить общую задачу
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Утвердить
 # Label for an approved task
