--- a/i18n/sv-SE.properties
+++ b/i18n/sv-SE.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Ett fel uppstod när uppgiften skapades. Försök ig
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Fel
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Ett fel inträffade när uppgiften skulle raderas.
+be.taskDeleteErrorMessage = Ett fel inträffade när uppgiften raderades. Uppdatera sidan och försök igen.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Radera uppgift
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Radera uppgift?
+be.taskDeletePrompt = Vill du radera den här uppgiften permanent?
 # Due date for a task
 be.taskDueDate = Förfaller
 # Error message when a task edit fails
 be.taskEditErrorMessage = Ett fel inträffade när uppgiften skulle uppdateras.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Modifiera uppgiften
 # Reject option for a task
 be.taskReject = Avvisa
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Förfallodatum
 be.tasks.addTaskForm.messageLabel = Meddelande
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Välj tilldelade
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Lägg till uppgift
 # title for approval task popup
 be.tasks.createTask.approval.title = Skapa godkännandeuppgift
 # title for general task popup
 be.tasks.createTask.general.title = Skapa allmän uppgift
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Redigera godkännandeuppgift
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Redigera allmän uppgift
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Godkänn
 # Label for an approved task
