--- a/i18n/tr-TR.properties
+++ b/i18n/tr-TR.properties
@@ -297,7 +297,7 @@ be.sidebarMetadataFetchingErrorContent = Meta veri alınırken bir hata oluştu.
 # Title for the preview metadata.
 be.sidebarMetadataTitle = Meta veri
 # Label for the sidebar tabs list
-be.sidebarNavLabel = Sidebar
+be.sidebarNavLabel = Kenar çubuğu
 # Label for file properties section in the preview sidebar
 be.sidebarProperties = Dosya Özellikleri
 # Label for the show sidebar button.
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = Bu görev oluşturulurken bir hata oluştu. Lütfen 
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = Hata
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = Bu görev silinirken bir hata oluştu.
+be.taskDeleteErrorMessage = Bu görev silinirken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = Görevi sil
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = Görev silinsin mi?
+be.taskDeletePrompt = Bu görevi kalıcı olarak silmek istediğinizden emin misiniz?
 # Due date for a task
 be.taskDueDate = Son Tarih
 # Error message when a task edit fails
 be.taskEditErrorMessage = Bu görev güncellenirken bir hata oluştu.
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = Görevi değiştir
 # Reject option for a task
 be.taskReject = Geri Çevir
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = Bitiş Tarihi
 be.tasks.addTaskForm.messageLabel = Mesaj
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Atananları Seçin
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Görev ekleyin
 # title for approval task popup
 be.tasks.createTask.approval.title = Onay Görevi Oluşturun
 # title for general task popup
 be.tasks.createTask.general.title = Genel Görev Oluşturun
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = Onay Görevini Düzenleyin
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = Genel Görevi Düzenleyin
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = Onayla
 # Label for an approved task
