--- a/i18n/zh-CN.properties
+++ b/i18n/zh-CN.properties
@@ -373,17 +373,17 @@ be.taskCreateErrorMessage = 创建此任务时出错。请重试。
 # Title shown above error message when a task creation fails
 be.taskCreateErrorTitle = 错误
 # Error message when a task deletion fails
-be.taskDeleteErrorMessage = 删除此任务时出错。
+be.taskDeleteErrorMessage = 删除此任务时出错。请刷新页面并重试。
 # Text to show on menu item to delete task
-be.taskDeleteMenuItem = Delete task
+be.taskDeleteMenuItem = 删除任务
 # Confirmation prompt text to delete task
-be.taskDeletePrompt = 删除任务？
+be.taskDeletePrompt = 是否确定要永久删除此任务？
 # Due date for a task
 be.taskDueDate = 到期
 # Error message when a task edit fails
 be.taskEditErrorMessage = 更新此任务时出错。
 # Text to show on menu item to edit task
-be.taskEditMenuItem = Modify task
+be.taskEditMenuItem = 修改任务
 # Reject option for a task
 be.taskReject = 拒绝
 # Error message when rejecting a task fails
@@ -406,16 +406,18 @@ be.tasks.addTaskForm.dueDateLabel = 到期日期
 be.tasks.addTaskForm.messageLabel = 消息
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = 选择受理人
-# label for create button in create task popup
+# label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = 添加任务
 # title for approval task popup
 be.tasks.createTask.approval.title = 创建审批任务
 # title for general task popup
 be.tasks.createTask.general.title = 创建常规任务
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit Approval Task
+be.tasks.editTask.approval.title = 编辑审批任务
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit General Task
+be.tasks.editTask.general.title = 编辑常规任务
+# label for edit button in create task modal in edit mode
+be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
 be.tasks.feed.approveAction = 批准
 # Label for an approved task
