chore(i18n): update translations (#1278)

--- a/i18n/da-DK.properties
+++ b/i18n/da-DK.properties
@@ -407,7 +407,7 @@ be.tasks.addTaskForm.messageLabel = Meddelelse
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Vælg modtagere
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Tilføj opgave
+be.tasks.addTaskForm.submit = Opret
 # title for approval task popup
 be.tasks.createTask.approval.title = Opret en godkendelsesopgave
 # title for general task popup
@@ -417,7 +417,7 @@ be.tasks.editTask.approval.title = Rediger godkendelsesopgave
 # modal title for when editing an existing general task
 be.tasks.editTask.general.title = Rediger generel opgave
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Opdatering
 # Approve option for an approval task
 be.tasks.feed.approveAction = Godkend
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Klassificering
 # Button to edit classification on an item
 boxui.classification.edit = Rediger
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Ikke klassificeret
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = Afventer
 # Label for collaborator avatars
