--- a/i18n/es-419.properties
+++ b/i18n/es-419.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = Mensaje
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Seleccionar personas asignadas
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Agregar tarea
+be.tasks.addTaskForm.submit = Crear
 # title for approval task popup
 be.tasks.createTask.approval.title = Crear una tarea de aprobación
 # title for general task popup
 be.tasks.createTask.general.title = Crear una tarea general
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Editar tarea de aprobación
+be.tasks.editTask.approval.title = Modificar tarea de aprobación
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Editar tarea general
+be.tasks.editTask.general.title = Modificar tarea general
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Actualizar
 # Approve option for an approval task
 be.tasks.feed.approveAction = Aprobar
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Clasificación
 # Button to edit classification on an item
 boxui.classification.edit = Editar
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = No clasificado
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = Pendiente
 # Label for collaborator avatars
