--- a/i18n/hi-IN.properties
+++ b/i18n/hi-IN.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = संदेश
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = असाइनी चुनें
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = कार्य जोड़ें
+be.tasks.addTaskForm.submit = बनाएँ
 # title for approval task popup
 be.tasks.createTask.approval.title = अनुमोदन कार्य बनाएँ
 # title for general task popup
 be.tasks.createTask.general.title = सामान्य कार्य बनाएँ
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = अनुमोदन कार्य संपादित करें
+be.tasks.editTask.approval.title = अनुमोदन कार्य संशोधित करें
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = सामान्य कार्य संपादित करें
+be.tasks.editTask.general.title = सामान्य कार्य संशोधित करें
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = अपडेट करें
 # Approve option for an approval task
 be.tasks.feed.approveAction = स्वीकार करें
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = वर्गीकरण
 # Button to edit classification on an item
 boxui.classification.edit = संपादित करें
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = वर्गीकृत नहीं
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = लंबित
 # Label for collaborator avatars
