--- a/i18n/ja-JP.properties
+++ b/i18n/ja-JP.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = メッセージ
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = 担当者の選択
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = タスクを追加
+be.tasks.addTaskForm.submit = 作成
 # title for approval task popup
 be.tasks.createTask.approval.title = 承認タスクの作成
 # title for general task popup
 be.tasks.createTask.general.title = 一般タスクの作成
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = 承認タスクを編集
+be.tasks.editTask.approval.title = 承認タスクを変更
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = 一般タスクを編集
+be.tasks.editTask.general.title = 一般タスクを変更
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = 更新
 # Approve option for an approval task
 be.tasks.feed.approveAction = 承認
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = 分類
 # Button to edit classification on an item
 boxui.classification.edit = 編集
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = 分類されていません
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = 保留中
 # Label for collaborator avatars
