--- a/i18n/ko-KR.properties
+++ b/i18n/ko-KR.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = 메시지
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = 담당자 선택
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = 작업 추가
+be.tasks.addTaskForm.submit = 만들기
 # title for approval task popup
 be.tasks.createTask.approval.title = 승인 작업 만들기
 # title for general task popup
 be.tasks.createTask.general.title = 일반 작업 만들기
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = 승인 작업 편집
+be.tasks.editTask.approval.title = 승인 작업 수정
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = 일반 작업 편집
+be.tasks.editTask.general.title = 일반 작업 수정
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = 업데이트
 # Approve option for an approval task
 be.tasks.feed.approveAction = 승인
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = 분류
 # Button to edit classification on an item
 boxui.classification.edit = 편집
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = 분류되지 않음
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = 보류 중
 # Label for collaborator avatars
