--- a/i18n/nb-NO.properties
+++ b/i18n/nb-NO.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = Melding
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Velg ansvarlige
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Legg til oppgave
+be.tasks.addTaskForm.submit = Opprett
 # title for approval task popup
 be.tasks.createTask.approval.title = Opprett en godkjenningsoppgave
 # title for general task popup
 be.tasks.createTask.general.title = Opprett en generell oppgave
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Rediger godkjenningsoppgave
+be.tasks.editTask.approval.title = Endre godkjenningsoppgave
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Rediger generell oppgave
+be.tasks.editTask.general.title = Endre generell oppgave
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Oppdater
 # Approve option for an approval task
 be.tasks.feed.approveAction = Godkjenn
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Klassifisering
 # Button to edit classification on an item
 boxui.classification.edit = Rediger
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Ikke klassifisert
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = Venter
 # Label for collaborator avatars
