--- a/i18n/nl-NL.properties
+++ b/i18n/nl-NL.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = Bericht
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Selecteer toegewezen gebruikers
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Taak toevoegen
+be.tasks.addTaskForm.submit = Maken
 # title for approval task popup
 be.tasks.createTask.approval.title = Goedkeuringstaak maken
 # title for general task popup
 be.tasks.createTask.general.title = Algemene taak maken
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Goedkeuringstaak bewerken
+be.tasks.editTask.approval.title = Goedkeuringstaak wijzigen
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Algemene taak bewerken
+be.tasks.editTask.general.title = Algemene taak wijzigen
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Bijwerken
 # Approve option for an approval task
 be.tasks.feed.approveAction = Goedkeuren
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Classificatie
 # Button to edit classification on an item
 boxui.classification.edit = Bewerken
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Niet geclassificeerd
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = In behandeling
 # Label for collaborator avatars
