--- a/i18n/pl-PL.properties
+++ b/i18n/pl-PL.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = Wiadomość
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Wybierz osoby przypisane
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Dodaj zadanie
+be.tasks.addTaskForm.submit = Utwórz
 # title for approval task popup
 be.tasks.createTask.approval.title = Utwórz zadanie zatwierdzenia
 # title for general task popup
 be.tasks.createTask.general.title = Utwórz zadanie ogólne
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edytuj zadanie zatwierdzenia
+be.tasks.editTask.approval.title = Modyfikuj zadanie zatwierdzenia
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edytuj zadanie ogólne
+be.tasks.editTask.general.title = Modyfikuj zadanie ogólne
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Zaktualizuj
 # Approve option for an approval task
 be.tasks.feed.approveAction = Zatwierdź
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Klasyfikacja
 # Button to edit classification on an item
 boxui.classification.edit = Edytuj
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Nie sklasyfikowano
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = Oczekujące
 # Label for collaborator avatars
