--- a/i18n/pt-BR.properties
+++ b/i18n/pt-BR.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = Mensagem
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Selecionar responsáveis
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Adicionar tarefa
+be.tasks.addTaskForm.submit = Criar
 # title for approval task popup
 be.tasks.createTask.approval.title = Criar uma tarefa de aprovação
 # title for general task popup
 be.tasks.createTask.general.title = Criar uma tarefa geral
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Editar tarefa de aprovação
+be.tasks.editTask.approval.title = Modificar tarefa de aprovação
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Editar tarefa geral
+be.tasks.editTask.general.title = Modificar tarefa geral
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Atualizar
 # Approve option for an approval task
 be.tasks.feed.approveAction = Aprovar
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Classificação
 # Button to edit classification on an item
 boxui.classification.edit = Editar
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Não classificado
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = Pendente
 # Label for collaborator avatars
