--- a/i18n/sv-SE.properties
+++ b/i18n/sv-SE.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = Meddelande
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Välj tilldelade
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Lägg till uppgift
+be.tasks.addTaskForm.submit = Skapa
 # title for approval task popup
 be.tasks.createTask.approval.title = Skapa godkännandeuppgift
 # title for general task popup
 be.tasks.createTask.general.title = Skapa allmän uppgift
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Redigera godkännandeuppgift
+be.tasks.editTask.approval.title = Ändra godkännandeuppgift
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Redigera allmän uppgift
+be.tasks.editTask.general.title = Ändra allmän uppgift
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Uppdatera
 # Approve option for an approval task
 be.tasks.feed.approveAction = Godkänn
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Klassificering
 # Button to edit classification on an item
 boxui.classification.edit = Redigera
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Inte klassificerat
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = Väntande
 # Label for collaborator avatars
