--- a/i18n/tr-TR.properties
+++ b/i18n/tr-TR.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = Mesaj
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Atananları Seçin
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Görev ekleyin
+be.tasks.addTaskForm.submit = Oluştur
 # title for approval task popup
 be.tasks.createTask.approval.title = Onay Görevi Oluşturun
 # title for general task popup
 be.tasks.createTask.general.title = Genel Görev Oluşturun
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Onay Görevini Düzenleyin
+be.tasks.editTask.approval.title = Onay Görevini Değiştirin
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Genel Görevi Düzenleyin
+be.tasks.editTask.general.title = Genel Görevi Değiştirin
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Güncelle
 # Approve option for an approval task
 be.tasks.feed.approveAction = Onayla
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Sınıflandırma
 # Button to edit classification on an item
 boxui.classification.edit = Düzenle
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Sınıflandırılmamış
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = Bekleniyor
 # Label for collaborator avatars
