--- a/i18n/bn-IN.properties
+++ b/i18n/bn-IN.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = বার্তা
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = স্বত্ত্বনিয়োগীদের নির্বাচন করুন
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = কাজ যোগ করুন
+be.tasks.addTaskForm.submit = তৈরী করুন
 # title for approval task popup
 be.tasks.createTask.approval.title = অনুমোদনের কার্য তৈরী করুন
 # title for general task popup
 be.tasks.createTask.general.title = সাধারণ কার্য তৈরি করুন
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = অনুমোদনের কার্য সম্পাদনা করুন
+be.tasks.editTask.approval.title = অনুমোদনের কার্য সংশোধন করুন
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = সাধারণ কার্য সম্পাদনা করুন
+be.tasks.editTask.general.title = সাধারণ কার্য সংশোধন করুন
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = আপডেট করুন
 # Approve option for an approval task
 be.tasks.feed.approveAction = অনুমোদন করুন
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = শ্রেণিবিভাজন
 # Button to edit classification on an item
 boxui.classification.edit = সম্পাদনা করুন
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = শ্রেণীবিভক্ত নয়
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = মুলতুবি রয়েছে
 # Label for collaborator avatars
