--- a/i18n/de-DE.properties
+++ b/i18n/de-DE.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = Nachricht
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Beauftragte auswählen
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Aufgabe hinzufügen
+be.tasks.addTaskForm.submit = Erstellen
 # title for approval task popup
 be.tasks.createTask.approval.title = Genehmigungsaufgabe erstellen
 # title for general task popup
 be.tasks.createTask.general.title = Allgemeine Aufgabe erstellen
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Genehmigungsaufgabe bearbeiten
+be.tasks.editTask.approval.title = Genehmigungsaufgabe ändern
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Allgemeine Aufgabe bearbeiten
+be.tasks.editTask.general.title = Allgemeine Aufgabe ändern
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Aktualisieren
 # Approve option for an approval task
 be.tasks.feed.approveAction = Genehmigen
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Klassifizierung
 # Button to edit classification on an item
 boxui.classification.edit = Bearbeiten
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Nicht klassifiziert
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = Ausstehend
 # Label for collaborator avatars
