--- a/i18n/en-GB.properties
+++ b/i18n/en-GB.properties
@@ -407,15 +407,15 @@ be.tasks.addTaskForm.messageLabel = Message
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Select assignees
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Add task
+be.tasks.addTaskForm.submit = Create
 # title for approval task popup
 be.tasks.createTask.approval.title = Create approval task
 # title for general task popup
 be.tasks.createTask.general.title = Create general task
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = Edit approval task
+be.tasks.editTask.approval.title = Modify approval task
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = Edit general task
+be.tasks.editTask.general.title = Modify general task
 # label for edit button in create task modal in edit mode
 be.tasks.editTaskForm.submit = Update
 # Approve option for an approval task
