--- a/i18n/fi-FI.properties
+++ b/i18n/fi-FI.properties
@@ -407,7 +407,7 @@ be.tasks.addTaskForm.messageLabel = Viesti
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Valitse vastuuhenkilöt
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Lisää tehtävä
+be.tasks.addTaskForm.submit = Luo
 # title for approval task popup
 be.tasks.createTask.approval.title = Luo hyväksyntätehtävä
 # title for general task popup
@@ -417,7 +417,7 @@ be.tasks.editTask.approval.title = Muokkaa hyväksyntätehtävää
 # modal title for when editing an existing general task
 be.tasks.editTask.general.title = Muokkaa yleistä tehtävää
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Päivitä
 # Approve option for an approval task
 be.tasks.feed.approveAction = Hyväksy
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Luokitus
 # Button to edit classification on an item
 boxui.classification.edit = Muokkaa
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Luokittelematon
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = Odottaa
 # Label for collaborator avatars
