--- a/i18n/fr-FR.properties
+++ b/i18n/fr-FR.properties
@@ -407,7 +407,7 @@ be.tasks.addTaskForm.messageLabel = Message
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Sélectionner les cessionnaires
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Ajouter une tâche
+be.tasks.addTaskForm.submit = Créer
 # title for approval task popup
 be.tasks.createTask.approval.title = Créer une tâche d'approbation
 # title for general task popup
@@ -417,7 +417,7 @@ be.tasks.editTask.approval.title = Modifier une tâche d'approbation
 # modal title for when editing an existing general task
 be.tasks.editTask.general.title = Modifier une tâche générale
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Mettre à jour
 # Approve option for an approval task
 be.tasks.feed.approveAction = Approuver
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Classement
 # Button to edit classification on an item
 boxui.classification.edit = Modifier
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Aucun classement
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = En attente
 # Label for collaborator avatars
