--- a/i18n/it-IT.properties
+++ b/i18n/it-IT.properties
@@ -407,7 +407,7 @@ be.tasks.addTaskForm.messageLabel = Messaggio
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = Seleziona assegnatari
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = Aggiungi attività
+be.tasks.addTaskForm.submit = Crea
 # title for approval task popup
 be.tasks.createTask.approval.title = Crea attività di approvazione
 # title for general task popup
@@ -417,7 +417,7 @@ be.tasks.editTask.approval.title = Modifica attività di approvazione
 # modal title for when editing an existing general task
 be.tasks.editTask.general.title = Modifica attività generale
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = Aggiorna
 # Approve option for an approval task
 be.tasks.feed.approveAction = Approva
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = Classificazione
 # Button to edit classification on an item
 boxui.classification.edit = Modifica
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = Nessuna classificazione
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = In sospeso
 # Label for collaborator avatars
