--- a/i18n/zh-CN.properties
+++ b/i18n/zh-CN.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = 消息
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = 选择受理人
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = 添加任务
+be.tasks.addTaskForm.submit = 创建
 # title for approval task popup
 be.tasks.createTask.approval.title = 创建审批任务
 # title for general task popup
 be.tasks.createTask.general.title = 创建常规任务
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = 编辑审批任务
+be.tasks.editTask.approval.title = 修改审批任务
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = 编辑常规任务
+be.tasks.editTask.general.title = 修改常规任务
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = 更新
 # Approve option for an approval task
 be.tasks.feed.approveAction = 批准
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = 分类
 # Button to edit classification on an item
 boxui.classification.edit = 编辑
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = 未分类
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = 待定
 # Label for collaborator avatars
