--- a/i18n/zh-TW.properties
+++ b/i18n/zh-TW.properties
@@ -407,17 +407,17 @@ be.tasks.addTaskForm.messageLabel = 訊息
 # label for task create form assignee input
 be.tasks.addTaskForm.selectAssigneesLabel = 選擇被指定者
 # label for create button in create task modal in create mode
-be.tasks.addTaskForm.submit = 新增工作
+be.tasks.addTaskForm.submit = 建立
 # title for approval task popup
 be.tasks.createTask.approval.title = 建立核准工作
 # title for general task popup
 be.tasks.createTask.general.title = 建立一般工作
 # title for when editing an existing approval task
-be.tasks.editTask.approval.title = 編輯核准工作
+be.tasks.editTask.approval.title = 修改核准工作
 # modal title for when editing an existing general task
-be.tasks.editTask.general.title = 編輯一般工作
+be.tasks.editTask.general.title = 修改一般工作
 # label for edit button in create task modal in edit mode
-be.tasks.editTaskForm.submit = Update
+be.tasks.editTaskForm.submit = 更新
 # Approve option for an approval task
 be.tasks.feed.approveAction = 核准
 # Label for an approved task
@@ -565,7 +565,7 @@ boxui.classification.classification = 分類
 # Button to edit classification on an item
 boxui.classification.edit = 編輯
 # Default message for classification in the sidebar when there is none
-boxui.classification.missing = Not classified
+boxui.classification.missing = 未分類
 # Text to display for users who have not accepted an invitation to collaborate yet
 boxui.collaboratorAvatars.collaboration.pendingCollabText = 待處理
 # Label for collaborator avatars
