feat(new-tasks): Fetch task collaborators (#1286)
* fix: Fetch task collaborators

* fix: Fetch task collaborators on modal open

* fix: fetch collaborator promise

* fix: getTaskCollaborator test

* fix: add tests

* fix: return if there is no fileID

--- a/i18n/en-US.properties
+++ b/i18n/en-US.properties
@@ -366,6 +366,8 @@ be.taskActionErrorTitle = Error
 be.taskApprove = Complete
 # Error message when approving a task fails
 be.taskApproveErrorMessage = An error has occurred while approving this task. Please refresh the page and try again.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = An error has occurred while completing this task. Please refresh the page and try again.
 # Error message when a task creation fails
