feat(tasks-new): add assignee list (#1287)
* feat(tasks-new): add assignee list

* feat(tasks-new): add assignee list, update tests

* feat(tasks_new): use test.each

* feat(tasks_new): update snapshot

--- a/i18n/en-US.properties
+++ b/i18n/en-US.properties
@@ -390,6 +390,10 @@ be.taskEditMenuItem = Modify task
 be.taskReject = Decline
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = An error has occurred while rejecting this task. Please refresh the page and try again.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Add Task
 # label for menu item that opens approval task popup
