fix(tasks-new): update doc.s and strings (#1317)

--- a/i18n/en-US.properties
+++ b/i18n/en-US.properties
@@ -222,6 +222,8 @@ be.previousFile = Previous File
 be.previousSegment = Previous Segment
 # Label for print action
 be.print = Print
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recents
 # Message shown when there are no recent items.
